Wed Apr 27 00:51:01 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_truncate): fix function.

	* include/ruby/win32.h (ftruncate, truncate, ftello, fseeko): non-64
	  versions on mingw are useless because they use int32_t.  fixes #4564

Wed Apr 27 00:00:37 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (dt_lite_set_tmx): should get df value.

Tue Apr 26 22:34:04 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/lib/date/format.rb (_iso8601): allowed day only civil
	  date.  disallowed separatorless day only ordinal date.

Mon Apr 25 21:31:36 2011  Nobuhiro Iwamatsu  <iwamatsu@nigauri.org>

	* ext/openssl/extconf.rb: Should check SSLv2_*method.
	  openssl compiled with "no-ssl2" the extconf don't fail
	  when running `make' having this compilation errors.
	  Patched by Laurent Arnoud. fixes #4562, #4556

Mon Apr 25 20:53:32 2011  Tajima, Akio <artonx@yahoo.co.jp>

	* win32/win32.c (kill): accept 0 only sig is SIGINT #4596

Mon Apr 25 19:59:47 2011  Tajima, Akio <artonx@yahoo.co.jp>

	* win32/win32.c (kill): accept 0 as pid, fixes #4596

Mon Apr 25 16:43:45 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* random.c (random_rand): remove unused variables.

	* struct.c (rb_struct_define_without_accessor): ditto.

	* strftime.c (rb_strftime_with_timespec): ditto.

	* sprintf.c: ditto.

	* time.c (time_asctime): remove useless GetTimeval().

	* thread_pthread.c: cast to (void *) for %p.

Mon Apr 25 11:02:11 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/ripper/lib/ripper/sexp.rb: fix rdoc arround sexp.
	  patched by Sho Hashimoto. fixes #4599

Mon Apr 25 08:24:04 2011  Shota Fukumori  <sorah@tubusu.net>

	* random.c (rb_f_rand, random_s_rand): RDocs for them.

Mon Apr 25 07:18:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* random.c (random_s_rand, Init_Random): Random.rand should behave as
	  Random::DEFAULT.rand rather than Kernel#rand.

	* random.c (rand_range, random_rand): rand_range function extracted
	  from random_rand function.
